--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,1 +1,10 @@
-/* You can add global styles to this file, and also import other style files */
+* {
+    font-family: 'Roboto', sans-serif;
+}
+
+body {
+    /* background-color: #4F535C; */
+    background: no-repeat;
+    background: linear-gradient(#41436A, #974063, #F54768, #FF9677);
+    background-attachment: fixed;
+}
