Added most of crypto API functionality

--- a/client/src/app/core/header/header.component.html
+++ b/client/src/app/core/header/header.component.html
@@ -6,7 +6,7 @@
                 <p>Welcome {{email}}</p>
             </li>
             <li><a href="">Coins</a></li>
-            <li><a href="">Forum</a></li>
+            <li><a href="">Cryptocurrency Converter</a></li>
             <div *ngIf="!hasUser" class="guestContainer">
                 <li><a href="">Login</a></li>
                 <li><a href="">Register</a></li>
