--- a/client/src/app/core/header/header.component.html
+++ b/client/src/app/core/header/header.component.html
@@ -1,11 +1,12 @@
 <nav>
     <ul>
-        <li id="logo"><a href=""><img src="/assets/Untitled.png" alt="logo"></a></li>
+        <li id="logo"><a routerLink="/home"><img src="/assets/Untitled.png" alt="logo"></a></li>
         <div class="button-container">
             <li *ngIf="hasUser">
                 <p>Welcome {{email}}</p>
             </li>
             <li><a href="">Coins</a></li>
+            <li><a routerLink="/forum">Forum</a></li>
             <li><a href="">Cryptocurrency Converter</a></li>
             <div *ngIf="!hasUser" class="guestContainer">
                 <li><a href="">Login</a></li>
@@ -18,10 +19,3 @@
         </div>
     </ul>
 </nav>
-<!-- 
-Home
-Forum
-Portfolio
-Login
-Register
-Logout -->
