--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -7,6 +7,6 @@
 body {
     /* background-color: #4F535C; */
     background: no-repeat;
-    background: linear-gradient(#41436A, #974063, #F54768, #FF9677);
+    background: linear-gradient(#0F131C, #450009);
     background-attachment: fixed;
 }
