--- a/client/src/app/auth/register/register.component.css
+++ b/client/src/app/auth/register/register.component.css
@@ -5,7 +5,7 @@
   justify-content: center;
   box-shadow: 2px 5px 13px 5px #000000ad, 8px -15px 31px -12px rgb(0 0 0 / 0%);
   border-radius: 15px;
-  margin: 150px 36% 35% 36%;
+  margin: 50px 36% 35% 36%;
 }
 
 form {
@@ -43,6 +43,10 @@ label {
   margin: 5px 15% 20px 15%;
 }
 
+.input:has(> input.ng-invalid.ng-touched) {
+  border-bottom: red 1px solid;
+}
+
 .input-icon {
   padding: 8px;
   padding-left: 0px;
@@ -53,6 +57,11 @@ label {
 input {
   text-align: center;
   border: none;
+  width: 300px;
+}
+
+input:focus {
+  outline: none;
 }
 
 .button-div {
@@ -64,7 +73,7 @@ input {
 
 button {
   background: rgb(198, 101, 199);
-  background: linear-gradient(90deg, rgba(198, 101, 199, 1) 0%, rgba(61, 127, 219, 1) 100%);
+  background: linear-gradient(90deg, #8B0014, #33008B 100%);
   border: none;
   border-radius: 10px;
   padding: 10px 30%;
@@ -83,4 +92,11 @@ a {
   padding-left: 3px;
   font-weight: bold;
   text-decoration: none;
+}
+
+.error {
+  text-align: center;
+  color: rgb(94, 94, 94);
+  font-style: italic;
+  font-size: 15px;
 }
