--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,1 +1,4 @@
-<h1>Share your thought and track your crypto gains!</h1>
+<h1>Track your crypto gains!</h1>
+<div class="container">
+  <app-crypto-card *ngFor="let card of cards" [card]="card"></app-crypto-card>
+</div>
