Created user authentication

--- a/client/src/app/home/crypto-card/crypto-card.component.html
+++ b/client/src/app/home/crypto-card/crypto-card.component.html
@@ -6,8 +6,8 @@
     <div class="text-center">
       <h3 class="crypto-title">{{ card.name }}</h3>
       <p>Price: ${{ card.currentPrice }}</p>
-      <p>Price 24h: ${{ card.priceChange24 }}</p>
       <p>Percent 24h: {{ card.percentageChange24 }}%</p>
+      <p>Percent 7d: {{ card.priceChange24 }}%</p>
     </div>
     <div class="data-buttons">
       <a class="button" href="">Add To Portfolio</a>
