--- a/client/src/app/auth/register/register.component.html
+++ b/client/src/app/auth/register/register.component.html
@@ -2,6 +2,7 @@
   <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
     <img class="logo" src="/assets/logo.png" alt="logo img">
     <h1>Register</h1>
+
     <label for="email">Email</label>
     <span class="error" *ngIf="!registerForm.get('email')?.valid && registerForm.get('email')?.touched">Invalid
       e-mail!</span>
@@ -10,23 +11,26 @@
       <input id="email" type="text" placeholder="Enter Email" formControlName="email">
       <img class="input-icon" src="" alt="">
     </div>
+
     <label for="password">Password</label>
-    <span class="error" *ngIf="!registerForm.get('pass')?.valid && registerForm.get('pass')?.touched">Invalid
+    <span class="error" *ngIf="!registerForm.get('password')?.valid && registerForm.get('password')?.touched">Invalid
       password!</span>
     <div class="input">
       <img class="input-icon" src="/assets/key-solid.svg" alt="pass">
-      <input id="pass" type="password" placeholder="Enter Password" formControlName="pass">
+      <input id="password" type="password" placeholder="Enter Password" formControlName="password">
       <img class="input-icon" src="" alt="">
     </div>
+
     <label for="repeatPass">Repeat Password</label>
     <span class="error" *ngIf="registerForm.get('rePass')?.errors?.['passwordDontMatch'] && registerForm.get('rePass')?.touched">Passwords must match!</span>
-    <span class="error" *ngIf="!registerForm.get('pass')?.valid && registerForm.get('pass')?.touched">Invalid
+    <span class="error" *ngIf="!registerForm.get('password')?.valid && registerForm.get('password')?.touched">Invalid
       password!</span>
     <div class="input">
       <img class="input-icon" src="/assets/key-solid.svg" alt="pass">
       <input id="rePass" type="password" placeholder="Repeat Password" formControlName="rePass">
       <img class="input-icon" src="" alt="">
     </div>
+
     <div class="button-div">
       <button type="submit" class="registerbtn button">Register</button>
     </div>
