--- a/client/src/app/shared/header/header.component.html
+++ b/client/src/app/shared/header/header.component.html
@@ -1,10 +1,13 @@
 <nav>
     <ul>
-        <li id="logo"><a routerLink="/home"><img src="/assets/logo.png" alt="logo"></a></li>
-        <div class="button-container">
-            <li *ngIf="hasUser">
+        <div class="left-container">
+            <li class="logo"><a routerLink="/home"><img src="/assets/logo.png" alt="logo"></a></li>
+            <li class="user" *ngIf="hasUser">
                 <p>Welcome {{email}}</p>
             </li>
+        </div>
+        <div class="right-container">
+            <li><a (click)="onTest()">TEST</a></li>
             <li><a routerLink="/coins">Coins</a></li>
             <li><a routerLink="/converter">Crypto Converter</a></li>
             <div *ngIf="!hasUser" class="guestContainer">
@@ -13,7 +16,7 @@
             </div>
             <div *ngIf="hasUser" class="userContainer">
                 <li><a routerLink="/portfolio">Portfolio</a></li>
-                <li><a>Logout</a></li>
+                <li><a (click)="onLogout()">Logout</a></li>
             </div>
         </div>
     </ul>
