Implemented a notification service

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,2 +1,7 @@
 <app-header></app-header>
+<app-notification 
+class="notif-container" 
+*ngFor="let notification of notifications; index as i" 
+(click)="remove(i)"
+[notification]="notification"></app-notification>
 <router-outlet></router-outlet>
