--- a/client/src/app/crypto-converter-view/crypto-converter/crypto-converter.component.css
+++ b/client/src/app/crypto-converter-view/crypto-converter/crypto-converter.component.css
@@ -1,3 +1,131 @@
-p {
+.container {
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  box-shadow: 2px 5px 13px 5px #000000ad, 8px -15px 31px -12px rgb(0 0 0 / 0%);
+  border-radius: 15px;
+  margin: 50px 25% 35% 25%;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 25px;
+}
+
+.title {
+  text-align: center;
+  font-family: 'Roboto', sans-serif;
+  color: black
+}
+
+h1 {
+  justify-content: center;
+  padding: 50px 0px 50px 0px;
+  text-decoration: underline;
+}
+
+.input {
+  display: flex;
+  justify-content: space-between;
+  border-bottom: black 1px solid;
+  padding: 0px 10px 10px 10px;
+  margin: 5px 30% 20px 30%;
+}
+
+input {
+  text-align: center;
+  border: none;
+  width: 80%;
+}
+
+input:focus {
+  outline: none;
+}
+
+.selector-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  padding: 0px 10px 10px 10px;
+  margin: 5px 47px 20px 47px;
+}
+
+.input-dropdown {
+  display: flex;
+  justify-content: space-between;
+  border-bottom: black 1px solid;
+  padding: 0px 10px 10px 10px;
+  margin: 5px 25px 15px 25px
+}
+
+.button-div {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 15px;
+}
+
+.button {
+  width: 35px;
+  height: 35px;
+  background: rgb(198, 101, 199);
+  background: linear-gradient(90deg, #8B0014, #33008B 100%);
+  border: none;
+  border-radius: 10px;
   color: white;
+}
+
+.input-dropdown input {
+  text-align: center;
+  border: none;
+  width: 80%;
+}
+
+.button:disabled {
+  background: gray;
+}
+
+.output {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 15px;
+}
+
+.menu {
+  display: inline-block;
+  position: relative;
+}
+
+.menu-content {
+  display: none;
+  position: absolute;
+  width: 74%;
+  height: 300px;
+  overflow: auto;
+  box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.712);
+  background-color: white;
+  border-radius: 6px;
+  margin-top: 27px;
+
+}
+
+.menu:hover .menu-content {
+  display: flex;
+  flex-direction: column;
+}
+
+.menu-content button {
+  display: block;
+  color: #000000;
+  padding: 5px;
+  text-decoration: none;
+  border: none;
+}
+
+.menu-content button:hover {
+  color: #FFFFFF;
+  background-color: #00A4BD;
 }
