Implemented two coin views top 100 and new coins

--- a/client/src/app/shared/header/header.component.html
+++ b/client/src/app/shared/header/header.component.html
@@ -8,7 +8,8 @@
         </div>
         <div class="right-container">
             <li><a (click)="onTest()">TEST</a></li>
-            <li><a routerLink="/coins">Coins</a></li>
+            <li><a routerLink="/coins/top100">Top 100</a></li>
+            <li><a routerLink="/coins/new-coins">New Coins</a></li>
             <li><a routerLink="/converter">Crypto Converter</a></li>
             <div *ngIf="!hasUser" class="guestContainer">
                 <li><a routerLink="/auth/login">Login</a></li>
