Added global data info in the coin views

--- a/client/src/app/coins-view/top-hundred/top-hundred.component.html
+++ b/client/src/app/coins-view/top-hundred/top-hundred.component.html
@@ -1,4 +1,7 @@
 <div class="container">
+  <div class="global-data">
+    <app-global-data></app-global-data>
+  </div>
   <div class="table">
     <h1>Top 100 coins</h1>
     <thead>
