--- a/client/src/app/coins-view/new-coins/new-coins.component.html
+++ b/client/src/app/coins-view/new-coins/new-coins.component.html
@@ -1,4 +1,7 @@
 <div class="container">
+  <div class="global-data">
+    <app-global-data></app-global-data>
+  </div>
   <div class="table">
     <h1>New Coins</h1>
     <thead>
