--- a/client/src/app/coins-view/top-hundred/top-hundred.component.css
+++ b/client/src/app/coins-view/top-hundred/top-hundred.component.css
@@ -1,15 +1,18 @@
 .container {
-  padding: 100px 10%;
-  color: black;
+  padding: 0px 10%;
+  color: white;
 }
 
 .table {
   display: flex;
   flex-direction: column;
   padding: 25px;
-  border: 1px solid white;
+  background: #526081;
   border-radius: 15px;
-  background: white;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  /* border: 1px solid white;
+  border-radius: 15px;
+  background: white; */
 }
 
 h1 {
@@ -78,4 +81,8 @@ tr {
 
 td {
   vertical-align: middle;
+}
+
+.global-data {
+  margin: 80px 0;
 }
