--- a/client/src/app/auth/login/login.component.css
+++ b/client/src/app/auth/login/login.component.css
@@ -1,11 +1,15 @@
 .container {
-  background-color: white;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  box-shadow: 2px 5px 13px 5px #000000ad, 8px -15px 31px -12px rgb(0 0 0 / 0%);
-  border-radius: 15px;
   margin: 50px 36% 35% 36%;
+  /* background-color: white;
+  border-radius: 15px;
+  box-shadow: 2px 5px 13px 5px #000000ad, 8px -15px 31px -12px rgb(0 0 0 / 0%); */
+  color: white;
+  background: #526081;
+  border-radius: 15px;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
 form {
@@ -55,6 +59,8 @@ label {
 }
 
 input {
+  color: white;
+  background: #526081;
   text-align: center;
   border: none;
   width: 300px;
@@ -62,6 +68,17 @@ input {
 
 input:focus {
   outline: none;
+}
+
+::placeholder {
+  color: white;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus, 
+input:-webkit-autofill:active{
+    -webkit-box-shadow: 0 0 0 30px #526081 inset !important;
 }
 
 .button-div {
@@ -96,7 +113,7 @@ a {
 
 .error {
   text-align: center;
-  color: rgb(94, 94, 94);
+  color: white;
   font-style: italic;
   font-size: 15px;
 }
