--- a/client/src/app/auth/register/register.component.html
+++ b/client/src/app/auth/register/register.component.html
@@ -1,13 +1,14 @@
 <div class="container">
   <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
-    <img class="logo" src="/assets/logo.png" alt="logo img">
+    <img class="logo" src="/assets/logo-white.png" alt="logo img">
     <h1>Register</h1>
 
     <label for="email">Email</label>
     <span class="error" *ngIf="!registerForm.get('email')?.valid && registerForm.get('email')?.touched">Invalid
       e-mail!</span>
     <div class="input">
-      <img class="input-icon" src="/assets/at-solid.svg" alt="pass">
+      <!-- <img class="input-icon" src="/assets/at-solid.svg" alt="pass"> -->
+      <i class="input-icon fa-solid fa-at"></i>
       <input id="email" type="text" placeholder="Enter Email" formControlName="email">
       <img class="input-icon" src="" alt="">
     </div>
@@ -16,7 +17,8 @@
     <span class="error" *ngIf="!registerForm.get('password')?.valid && registerForm.get('password')?.touched">Invalid
       password!</span>
     <div class="input">
-      <img class="input-icon" src="/assets/key-solid.svg" alt="pass">
+      <!-- <img class="input-icon" src="/assets/key-solid.svg" alt="pass"> -->
+      <i class="input-icon fa-solid fa-key"></i>
       <input id="password" type="password" placeholder="Enter Password" formControlName="password">
       <img class="input-icon" src="" alt="">
     </div>
@@ -26,7 +28,8 @@
     <span class="error" *ngIf="!registerForm.get('password')?.valid && registerForm.get('password')?.touched">Invalid
       password!</span>
     <div class="input">
-      <img class="input-icon" src="/assets/key-solid.svg" alt="pass">
+      <!-- <img class="input-icon" src="/assets/key-solid.svg" alt="pass"> -->
+      <i class="input-icon fa-solid fa-key"></i>
       <input id="rePass" type="password" placeholder="Repeat Password" formControlName="rePass">
       <img class="input-icon" src="" alt="">
     </div>
