Added logos to the new coins view

--- a/client/src/app/coins-view/new-coins/coin-new-row/coin-new-row.component.html
+++ b/client/src/app/coins-view/new-coins/coin-new-row/coin-new-row.component.html
@@ -2,6 +2,9 @@
   <td id="first">
     <p>{{index}}</p>
   </td>
+  <td id="second">
+    <img src="{{coin.image}}" alt="coin logo">
+  </td>
   <td id="third">
     <strong>{{coin.name}}</strong>
   </td>
