--- a/client/src/app/coins-view/new-coins/new-coins.component.html
+++ b/client/src/app/coins-view/new-coins/new-coins.component.html
@@ -7,6 +7,7 @@
     <thead>
       <tr>
         <td id="first">#</td>
+        <td id="second"></td>
         <td id="third">Coin</td>
         <td id="fourth">Sym</td>
         <td id="fifth">Price</td>
