Created the portfolio template

--- a/client/src/app/portfolio-view/portfolio/portfolio.component.html
+++ b/client/src/app/portfolio-view/portfolio/portfolio.component.html
@@ -1,3 +1,28 @@
 <div class="container">
-  
+  <div class="portfolio-status">
+    <div class="card">
+      <div class="top-row-cap">
+        <p>$282.32</p>
+      </div>
+      <hr>
+      <strong>Total Balance</strong>
+    </div>
+    <div class="card">
+      <div class="top-row-cap">
+        <p>-$0.130000</p>
+      </div>
+      <hr>
+      <strong>24h Portfolio Change (-0.05%)</strong>
+    </div>
+    <div class="card">
+      <div class="top-row-cap">
+        <p>-$532.11</p>
+      </div>
+      <hr>
+      <strong>Total Profit Loss (-63.42%)</strong>
+    </div>
+  </div>
+  <div class="portfolio-data">
+    <app-portfolio-table></app-portfolio-table>
+  </div>
 </div>
