--- a/client/src/app/portfolio-view/portfolio-table/portfolio-table.component.html
+++ b/client/src/app/portfolio-view/portfolio-table/portfolio-table.component.html
@@ -1,5 +1,8 @@
 <div class="table">
-  <h1>My Portfolio</h1>
+  <div class="title">
+    <h1>My Portfolio</h1>
+    <button type="button">Add New Coin</button>
+  </div>
   <thead>
     <tr>
       <td id="first">#</td>
@@ -9,6 +12,7 @@
       <td id="fifth">Price</td>
       <td id="sixth">Holdings</td>
       <td id="seventh">PNL</td>
+      <td id="eighth"></td>
     </tr>
   </thead>
   <tbody>
