--- a/client/src/app/portfolio-view/portfolio-table/portfolio-table-row/portfolio-table-row.component.css
+++ b/client/src/app/portfolio-view/portfolio-table/portfolio-table-row/portfolio-table-row.component.css
@@ -16,10 +16,11 @@ td {
 #first {
   width: 25px;
   padding-top: 20px;
+  text-align: center;
 }
 
 #second {
-  padding-top: 20px;
+  padding-top: 17px;
 }
 
 #third {
@@ -49,6 +50,12 @@ td {
   width: 100px;
   padding-top: 12px;
   text-align: center;
+}
+
+#eighth {
+  padding-top: 20px;
+  width: 25px;
+  cursor: pointer;
 }
 
 img {
