--- a/client/src/app/portfolio-view/portfolio-table/portfolio-table-row/portfolio-table-row.component.html
+++ b/client/src/app/portfolio-view/portfolio-table/portfolio-table-row/portfolio-table-row.component.html
@@ -22,4 +22,7 @@
     <p>-$152.32</p>
     <p>-47.61%</p>
   </td>
+  <td id="eighth">
+    <a><i class="fa-solid fa-xmark"></i></a>
+  </td>
 </tr>
