Added a transaction modal with search and some bugfixes

--- a/client/src/app/auth/login/login.component.css
+++ b/client/src/app/auth/login/login.component.css
@@ -75,10 +75,11 @@ input:focus {
 }
 
 input:-webkit-autofill,
-input:-webkit-autofill:hover, 
-input:-webkit-autofill:focus, 
-input:-webkit-autofill:active{
-    -webkit-box-shadow: 0 0 0 30px #526081 inset !important;
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  -webkit-box-shadow: 0 0 0 30px #526081 inset !important;
+  -webkit-text-fill-color: rgb(255, 255, 255);
 }
 
 .button-div {
@@ -97,6 +98,10 @@ button {
   font-size: large;
   color: white;
   cursor: pointer;
+}
+
+button:disabled {
+  cursor: not-allowed
 }
 
 .no-account {
