--- a/client/src/app/auth/register/register.component.html
+++ b/client/src/app/auth/register/register.component.html
@@ -35,7 +35,7 @@
     </div>
 
     <div class="button-div">
-      <button type="submit" class="registerbtn button">Register</button>
+      <button type="submit" class="registerbtn button" [disabled]="!registerForm.valid">Register</button>
     </div>
     <div class="no-account">
       <p>Already have an account? <a routerLink="/auth/login">Sign in</a>.</p>
