--- a/client/src/app/converter-view/crypto-converter/crypto-converter.component.css
+++ b/client/src/app/converter-view/crypto-converter/crypto-converter.component.css
@@ -109,7 +109,8 @@ input:focus {
   display: none;
   position: absolute;
   width: 74%;
-  height: 300px;
+  height: fit-content;
+  max-height: 300px;
   overflow: auto;
   box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.712);
   background-color: white;
