--- a/client/src/app/portfolio-view/portfolio-table/portfolio-table.component.html
+++ b/client/src/app/portfolio-view/portfolio-table/portfolio-table.component.html
@@ -1,7 +1,7 @@
 <div class="table">
   <div class="title">
     <h1>My Portfolio</h1>
-    <button type="button">Add New Coin</button>
+    <button type="button" (click)="showModal()">Add New Coin</button>
   </div>
   <thead>
     <tr>
