--- a/client/src/app/coins-view/new-coins/coin-new-row/coin-new-row.component.html
+++ b/client/src/app/coins-view/new-coins/coin-new-row/coin-new-row.component.html
@@ -12,16 +12,16 @@
     <p>{{coin.symbol | uppercase}}</p>
   </td>
   <td id="fifth">
-    <p>{{coin.price | number:'1.2-2'}}</p>
+    <p>${{coin.price | number:'1.2-10'}}</p>
   </td>
   <td id="sixth">
-    <p>{{coin.percent_change_1h | number:'1.2-2'}}</p>
+    <p>{{coin.percent_change_1h | number:'1.2-2'}}%</p>
   </td>
   <td id="seventh">
-    <p>{{coin.percent_change_24h | number:'1.2-2'}}</p>
+    <p>{{coin.percent_change_24h | number:'1.2-2'}}%</p>
   </td>
   <td id="eighth">
-    <p>{{coin.percent_change_7d | number:'1.2-2'}}</p>
+    <p>{{coin.percent_change_7d | number:'1.2-2'}}%</p>
   </td>
   <td id="tenth">
     <p>{{coin.total_supply | number:'1.0'}}</p>
