--- a/client/src/app/coins-view/top-hundred/coin-top-row/coin-top-row.component.html
+++ b/client/src/app/coins-view/top-hundred/coin-top-row/coin-top-row.component.html
@@ -12,19 +12,19 @@
     <p>{{coin.symbol | uppercase}}</p>
   </td>
   <td id="fifth">
-    <p>{{coin.current_price | number:'1.2-2'}}</p>
+    <p>${{coin.current_price | number:'1.2-10'}}</p>
   </td>
   <td id="sixth">
-    <p>{{coin.price_change_percentage_1h_in_currency | number:'1.2-2'}}</p>
+    <p>{{coin.price_change_percentage_1h_in_currency | number:'1.2-2'}}%</p>
   </td>
   <td id="seventh">
-    <p>{{coin.price_change_percentage_24h | number:'1.2-2'}}</p>
+    <p>{{coin.price_change_percentage_24h | number:'1.2-2'}}%</p>
   </td>
   <td id="eighth">
-    <p>{{coin.price_change_percentage_7d_in_currency | number:'1.2-2'}}</p>
+    <p>{{coin.price_change_percentage_7d_in_currency | number:'1.2-2'}}%</p>
   </td>
   <td id="ninth">
-    <p>{{coin.market_cap | number:'1.0'}}</p>
+    <p>${{coin.market_cap | number:'1.0'}}</p>
   </td>
   <td id="tenth">
     <p>{{coin.total_supply | number:'1.0'}}</p>
