--- a/client/src/app/portfolio-view/portfolio-table/portfolio-table.component.html
+++ b/client/src/app/portfolio-view/portfolio-table/portfolio-table.component.html
@@ -5,23 +5,22 @@
   </div>
   <thead>
     <tr>
-      <td id="first">#</td>
-      <td id="second"></td>
-      <td id="third">Coin</td>
-      <td id="fourth">Sym</td>
-      <td id="fifth">Price</td>
+      <td id="first"></td>
+      <td id="second">Coin</td>
+      <td id="third">Sym</td>
+      <td id="fourth">Price</td>
+      <td id="fifth">Cost</td>
       <td id="sixth">Holdings</td>
       <td id="seventh">PNL</td>
       <td id="eighth"></td>
     </tr>
   </thead>
   <tbody>
-    <app-portfolio-table-row></app-portfolio-table-row>
-    <app-portfolio-table-row></app-portfolio-table-row>
-    <app-portfolio-table-row></app-portfolio-table-row>
+    <app-portfolio-table-row 
+    *ngFor="let transaction of userTransactions"
+    [transactionId]="transaction"></app-portfolio-table-row>
   </tbody>
 </div>
-
 <!-- 
   Logo
   Coin name x 2
