--- a/client/src/app/portfolio-view/portfolio/portfolio.component.html
+++ b/client/src/app/portfolio-view/portfolio/portfolio.component.html
@@ -2,27 +2,20 @@
   <div class="portfolio-status">
     <div class="card">
       <div class="top-row-cap">
-        <p>$282.32</p>
+        <p>${{totalBalance | number:'1.2-2'}}</p>
       </div>
       <hr>
       <strong>Total Balance</strong>
     </div>
     <div class="card">
       <div class="top-row-cap">
-        <p>-$0.130000</p>
+        <p>${{totalPnL | number:'1.2-2'}}</p>
       </div>
       <hr>
-      <strong>24h Portfolio Change (-0.05%)</strong>
-    </div>
-    <div class="card">
-      <div class="top-row-cap">
-        <p>-$532.11</p>
-      </div>
-      <hr>
-      <strong>Total Profit Loss (-63.42%)</strong>
+      <strong>Total Profit Loss ({{totalPnLPercent | number:'1.2-2'}}%)</strong>
     </div>
   </div>
-  <div class="portfolio-data"> 
+  <div class="portfolio-data">
     <app-portfolio-table></app-portfolio-table>
   </div>
   <div class="modal" *ngIf="isAddCoinModal">
