Finished with the portfolio view

--- a/client/src/app/portfolio-view/portfolio/portfolio.component.html
+++ b/client/src/app/portfolio-view/portfolio/portfolio.component.html
@@ -18,7 +18,7 @@
   <div class="portfolio-data">
     <app-portfolio-table></app-portfolio-table>
   </div>
-  <div class="modal" *ngIf="isAddCoinModal">
+  <div class="modal" *ngIf="isAddCoinModalRendered">
     <app-add-coin-modal></app-add-coin-modal>
   </div>
 </div>
