--- a/client/src/app/page-not-found/page-not-found.component.html
+++ b/client/src/app/page-not-found/page-not-found.component.html
@@ -1,1 +1,3 @@
-<p>page-not-found works!</p>
+<div class="container">
+  <img src="https://www.prestashop.com/sites/default/files/wysiwyg/404_not_found.png" alt="404 not found">
+</div>
